# 2026-G4-Emidens

./: .gitignore  PRD.md
backend/: .env.example  main.py  pyproject.toml  pyrightconfig.json  settings.py
backend/agents/: __init__.py  _factory.py  _react.py  _stub.py  base.py  cardio_expert.py  drug_dosing_expert.py  orchestrator.py  regulatory_expert.py  research_expert.py
backend/agents/research/: __init__.py  _stub.py  agent.py
backend/agents/research/skills/: evidence_grading.md
backend/agents/research/tools/: __init__.py  pubmed.py
backend/api/: __main__.py  app.py
backend/api/routes/: query.py
backend/graph/: __init__.py  pipeline.py  state.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: mockData.tsx  statusStyles.ts  types.ts
frontend/src/api/: events.ts  stream.ts
frontend/src/app/: App.tsx
frontend/src/app/components/: AgentCard.tsx  AgentResponses.tsx  Header.tsx  RunOverview.tsx  Sidebar.tsx  SourcePreview.tsx  StatusBadge.tsx
frontend/src/app/components/live/: ExpertResponseCard.tsx  QueryInput.tsx  RoutingPanel.tsx  ToolEventLine.tsx
frontend/src/app/pages/: NewRunPage.tsx  PlaceholderPage.tsx  SessionDetailPage.tsx  SessionsPage.tsx
frontend/src/hooks/: useQueryStream.ts
frontend/src/styles/: theme.css
