[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=1.4.1",
    "langchain-core>=1.3.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.9",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
]
